--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -18,5 +17,13 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: #3b413c;
+}
+h1{
+  font-size: 2.5em;
+  border-bottom: 2px solid rgb(105, 103, 103);
+  padding: 5px;
+}
+h2{
+  color:rgb(158, 153, 153);
 }
